--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "babel-preset-react": "^6.22.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
+    "install": "^0.8.7",
+    "material-ui": "^0.17.0",
+    "npm": "^4.2.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "socket.io": "^1.7.2"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
+    "babel-preset-stage-1": "^6.22.0",
     "http-server": "^0.9.0",
     "webpack": "^2.2.1"
   }
