--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "socket.io": "^1.7.2"
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
