--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project 2 for CST438",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,10 @@
     "babel-loader": "^6.2.10",
     "babel-preset-stage-1": "^6.22.0",
     "http-server": "^0.9.0",
+    "jest-cli": "^19.0.2",
     "webpack": "^2.2.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
