--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-preset-stage-1": "^6.22.0",
     "http-server": "^0.9.0",
