--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
 test:
   override:
     - npm run test
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: immense-ridge-38597
