--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "install": "^0.8.7",
     "material-ui": "^0.17.0",
     "npm": "^4.2.0",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "sequelize": "^3.30.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.3"
   },
