--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.22.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
+    "firebase": "^3.7.0",
     "install": "^0.8.7",
     "material-ui": "^0.17.0",
     "npm": "^4.2.0",
@@ -38,6 +39,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "reactfire": "^1.0.0",
     "sequelize": "^3.30.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.3"
