--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project 2 for CST438",
   "main": "app.js",
   "scripts": {
+    "start": "babel-node --presets es2015 app.js",
     "test": "jest"
   },
   "repository": {
@@ -37,6 +38,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-infinite": "^0.10.0",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "reactfire": "^1.0.0",
