--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "firebase": "^3.7.0",
