--- a/package.json
+++ b/package.json
@@ -50,9 +50,13 @@
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
     "http-server": "^0.9.0",
+    "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
+    "react-test-renderer": "^15.4.2",
     "webpack": "^2.2.1"
   },
   "jest": {
