--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "install": "^0.8.7",
     "material-ui": "^0.17.0",
     "npm": "^4.2.0",
+    "npm-openweathermap": "0.0.1",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
