--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "reactfire": "^1.0.0",
+    "request": "^2.80.0",
     "sequelize": "^3.30.2",
     "socket.io": "^1.7.2",
-    "socket.io-client": "^1.7.3"
+    "socket.io-client": "^1.7.3",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
