--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.23.0",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "firebase": "^3.7.0",
     "install": "^0.8.7",
     "material-ui": "^0.17.0",
+    "mongoose": "^4.10.2",
     "npm": "^4.2.0",
     "npm-openweathermap": "0.0.1",
     "pg": "^6.1.2",
