--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
